welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: value and is not a member of Boolean
  else if (!we(day) and vacation) {return "10:00"}
                    ^